# impractical-python

01-pig-latin/: pyproject.toml
01-pig-latin/src/: pig-latin.py  pig_latin.py
01-poor-mans-bar-chart/: pyproject.toml
01-poor-mans-bar-chart/src/: poor_mans_bar_chart.py
01-silly-name-generator/: .pylintrc  pyproject.toml
01-silly-name-generator/src/: pseudonyms.py
02-finding-palindromes/: 2of4brif.txt  pyproject.toml
02-finding-palindromes/src/02_finding_palindromes/: load_dictionary.py  palindromes.py
02-finding-palindromes/tests/: test_02_finding_palindromes.py
