[tool.poetry]
name = "01-pig-latin"
version = "0.1.0"
description = ""
authors = ["Malanius Privierre <malaniusprivierre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
